feat: add meta-test generator for self-validation of test generation algorithms
- Implemented a new script `meta-test-generator.ts` that analyzes and generates meta-tests for NSTG's test generation system.
- The script detects coverage gaps, generates actionable improvement recommendations, and provides a comprehensive report on the testing process.

feat: create validation script for GitHub Copilot context

- Added `validate-copilot-context.ts` to verify the configuration and documentation for GitHub Copilot integration.
- The script checks for the existence and validity of Copilot instruction files, skill files, agent invocation patterns, and VS Code settings.
- It generates a detailed validation report summarizing the results and recommendations for improvements.

--- a/package.json
+++ b/package.json
@@ -46,7 +46,14 @@
     "release": "changeset publish",
     "version": "changeset version",
     "benchmark": "tsx scripts/benchmark.ts",
-    "download-z3": "tsx scripts/download-z3.ts"
+    "download-z3": "tsx scripts/download-z3.ts",
+    "dev-assistant": "tsx scripts/dev-assistant.ts",
+    "validate:copilot": "tsx scripts/validate-copilot-context.ts",
+    "meta-test": "tsx scripts/meta-test-generator.ts",
+    "meta-test:analyze": "tsx scripts/meta-test-generator.ts --analyze-only",
+    "meta-test:improve": "tsx scripts/meta-test-generator.ts --auto-improve",
+    "meta-test:verbose": "tsx scripts/meta-test-generator.ts --verbose",
+    "coverage:diff": "tsx scripts/calculate-coverage-diff.ts"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.0",
