refactor: update assertion builder and template engine for improved type handling
- Renamed options parameter to _options in AssertionBuilder methods for clarity.
- Added type safety by ensuring testCase.metadata.explanation is converted to a string.
- Enhanced template engine to handle optional chaining for region properties and added checks for undefined test inputs.
- Updated test generator to skip undefined inputs and improved handling of region properties.
- Refactored type-space classes to improve type constraints and handling of special values.
- Enhanced type definitions in shared types for better clarity and usability.
- Improved error handling and type safety in SMT solver implementation.
- Added backward compatibility for meta-test generator to support both real and simulated modes.
- Introduced new configuration options for NSTG engine in meta-test generator.

--- a/packages/smt-solver/package.json
+++ b/packages/smt-solver/package.json
@@ -22,6 +22,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "@nstg/core": "workspace:*",
     "@nstg/shared": "workspace:*",
     "z3-solver": "^4.12.2"
   },
