feat: initialize Next.js app with global styles and layout
- Add ESLint configuration for Next.js core web vitals
- Create global CSS file with Tailwind CSS setup and base styles
- Implement RootLayout component for application layout with metadata
- Add TypeScript environment definitions for Next.js

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,15 +43,15 @@ jobs:
         run: pnpm test:coverage
         continue-on-error: true
 
-      - name: 📤 Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
-        if: always()
-        with:
-          files: ./coverage/coverage-final.json
-          flags: unittests
-          name: codecov-umbrella
-          fail_ci_if_error: false
-          verbose: true
+      # - name: 📤 Upload coverage to Codecov
+      #   uses: codecov/codecov-action@v3
+      #   if: always()
+      #   with:
+      #     files: ./coverage/coverage-final.json
+      #     flags: unittests
+      #     name: codecov-umbrella
+      #     fail_ci_if_error: false
+      #     verbose: true
 
       - name: ✅ Test execution summary
         if: success()
